deployments/kubesphere/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubesphere
spec:
  hosts:
    - kubesphere.erpf.de
    - kubesphere.zelos.k8s.erpf.de
  gateways:
    - kubesphere
    - kubesphere-cluster
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          port:
            number: 80
          host: ks-console
